--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,25 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Gallery</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
+    <form id="form" class="form" autocomplete="off">
+      <label>
+        <input
+          class="search-input"
+          id="searchInput"
+          type="text"
+          placeholder="Search images..."
+          name="searchInput"
+      /></label>
+      <button class="search-btn" type="submit">Search</button>
+    </form>
 
-    <section>
-      <h1>Lorem ipsum dolor sit amet.</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
+    <ul class="gallery" id="gallery"></ul>
+    <button class="load-images-btn hide" id="loadBtn">Load more</button>
+    <div class="loader hide"></div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
